# ai-agents-platform

./: .gitignore  .mcp.json  CONTRIBUTING.md  Makefile  README.md  cliff.toml  docker-compose.yml  prompt.md  pyproject.toml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  .trivyignore  Dockerfile  Dockerfile.agent  README.md  alembic.ini  pyproject.toml
backend/.claude/: CLAUDE.md  PROJECT_CONFIG.ai-agents-platform.md  PROJECT_CONFIG.template.md  README.md  context-guide.md  project-config.md  project-config.template.md
backend/.claude/rules/: api-design.md  architecture.md  checklist.md  code-style.md  logging.md  observability.md  project-structure.md  sdk-first.md  security.md  tech-stack.md  testing.md
backend/doc/: context-guide.md
backend/migrations/: env.py
backend/migrations/versions/: 020f072419b6_add_agent_blueprints.py  2a7976c618a7_create_skills_table.py  8d5283b682df_create_users_table.py  a05f3d568a82_add_builder_v2_fields.py  a1b2c3d4e5f6_create_agents_table.py  a1b2c3d4e5f6_create_skills_table.py  b1c2d3e4f5g6_add_agent_blueprints.py  b2c3d4e5f6a7_create_conversations_and_messages_tables.py  b2c3d4e5f6a7_create_tools_table.py  c2d3e4f5g6h7_add_builder_v2_fields.py  c3d4e5f6a7b8_create_tools_table.py  d4e5f6a7b8c9_create_knowledge_base_and_documents_tables.py  e5f6a7b8c9d0_add_runtime_type_to_agents.py  f1a2b3c4d5e6_add_login_lockout_fields_to_users.py  g6h7i8j9k0l1_create_refresh_tokens_table.py  h7i8j9k0l1m2_create_usage_records_table.py  i8j9k0l1m2n3_create_templates_table.py  j9k0l1m2n3o4_add_gateway_target_id_to_tools.py  k0l1m2n3o4p5_add_enable_teams_to_agents.py  l1m2n3o4p5q6_create_team_executions_tables.py  m2n3o4p5q6r7_make_conversation_id_nullable.py  n3o4p5q6r7s8_create_evaluation_tables.py  o4p5q6r7s8t9_create_audit_logs_table.py  p5q6r7s8t9u0_add_audit_logs_append_only_triggers.py  q6r7s8t9u0v1_add_error_message_to_knowledge_bases.py  r7s8t9u0v1w2_seed_admin_user.py  s8t9u0v1w2x3_add_eval_pipelines_table.py  u0v1w2x3y4z5_create_builder_sessions_table.py  v1w2x3y4z5a6_add_sso_fields_to_users.py  w2x3y4z5a6b7_add_departments_and_department_id.py  x3y4z5a6b7c8_create_budgets_table.py  y4z5a6b7c8d9_add_tool_ids_to_agents.py  z5a6b7c8d9e0_add_enable_memory_to_agents.py
backend/scripts/: migrate_agents_to_blueprint.py  migrate_with_lock.py  seed_templates.py  wave1_create_users.py  wave3_create_users.py
backend/src/: __init__.py  agent_entrypoint.py
backend/src/modules/agents/: __init__.py
backend/src/modules/agents/api/: __init__.py  dependencies.py  endpoints.py
backend/src/modules/agents/application/: __init__.py
backend/src/modules/agents/domain/: __init__.py  events.py  exceptions.py
backend/src/modules/agents/infrastructure/: __init__.py
backend/src/modules/audit/: __init__.py
backend/src/modules/audit/api/: dependencies.py  endpoints.py
backend/src/modules/audit/application/: __init__.py
backend/src/modules/audit/domain/: __init__.py  events.py  exceptions.py
backend/src/modules/audit/infrastructure/: __init__.py  event_subscriber.py
backend/src/modules/auth/: __init__.py
backend/src/modules/auth/api/: __init__.py  admin_endpoints.py  dependencies.py  endpoints.py  sso_endpoints.py
backend/src/modules/auth/application/: __init__.py
backend/src/modules/auth/domain/: __init__.py  exceptions.py
backend/src/modules/auth/infrastructure/: __init__.py
backend/src/modules/billing/: __init__.py
backend/src/modules/billing/api/: dependencies.py  endpoints.py
backend/src/modules/billing/domain/: events.py  exceptions.py
backend/src/modules/builder/: __init__.py
backend/src/modules/builder/api/: dependencies.py  endpoints.py
backend/src/modules/builder/domain/: exceptions.py
backend/src/modules/evaluation/: __init__.py
backend/src/modules/execution/: __init__.py
backend/src/modules/insights/: __init__.py
backend/src/modules/skills/: __init__.py
backend/src/modules/templates/: __init__.py
backend/src/modules/tool_catalog/: __init__.py
backend/src/presentation/api/: event_subscriptions.py  main.py  providers.py  seed.py
backend/src/shared/api/: __init__.py  exception_handlers.py  schemas.py  sse_helpers.py
backend/src/shared/application/: __init__.py  dtos.py  ownership.py
backend/src/shared/domain/: __init__.py  base_entity.py  constants.py  event_bus.py  events.py  exceptions.py  repositories.py
backend/src/shared/infrastructure/: __init__.py  database.py  logging.py  pydantic_repository.py  secrets_client.py  settings.py  sse_connection_manager.py  tracing.py  utils.py
backend/tests/: conftest.py  test_agent_entrypoint.py
backend/tests/e2e/: conftest.py  test_agents_crud.py  test_auth_flow.py  test_blueprint_lifecycle.py  test_builder_v2_flow.py  test_health.py  test_readonly_endpoints.py  test_skill_lifecycle.py  test_tool_gateway_lifecycle.py
backend/tests/modules/agents/: conftest.py
backend/tests/modules/audit/: __init__.py  conftest.py
backend/tests/modules/auth/: conftest.py
backend/tests/modules/billing/: conftest.py
backend/tests/modules/builder/: conftest.py
backend/tests/modules/evaluation/: conftest.py
backend/tests/modules/execution/: conftest.py
backend/tests/modules/insights/: conftest.py
backend/tests/modules/knowledge/: conftest.py
backend/tests/modules/skills/: conftest.py
backend/tests/modules/templates/: conftest.py
backend/tests/modules/tool_catalog/: conftest.py
backend/tests/presentation/api/: test_event_subscriptions.py  test_health.py  test_main.py  test_providers.py  test_stats.py
backend/tests/shared/api/: test_exception_handlers.py  test_schemas.py  test_sse_helpers.py
backend/tests/shared/domain/: test_agent_creator_types.py  test_agent_querier.py  test_base_entity.py  test_event_bus.py  test_events.py  test_exceptions.py  test_repositories.py
backend/tests/shared/infrastructure/: test_connection_pool.py  test_database.py  test_logging.py  test_pydantic_repository.py  test_secrets_client.py  test_settings.py  test_sse_connection_manager.py  test_tracing.py
backend/tests/unit/: test_architecture_compliance.py
(+1140 files in other folders)
