[project]
name = "ai-agents-platform"
version = "0.1.0"
description = "AI Agents Platform - 基于 Amazon Bedrock AgentCore 的企业级 AI Agents 平台后端服务"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AI Agents Platform Team" }
]
keywords = ["ai", "agents", "aws", "bedrock", "agentcore", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web 框架
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # 数据验证
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    # 数据库
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "asyncmy>=0.2.9",
    # AWS SDK (Platform API 路径: AgentCore 资源管理 + Bedrock KB + 降级 Converse API)
    "boto3>=1.36.0",
    "bedrock-agentcore>=1.3.0", # AgentCore SDK (Runtime 部署封装, 0.x→1.x 升级)
    # Agent 框架 (Agent 执行路径: SDK → Claude Code CLI → Bedrock Invoke API, ADR-006)
    "claude-agent-sdk>=0.1.44",
    # 安全
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    # SSO / SAML + LDAP
    "python3-saml>=1.16.0",
    "ldap3>=2.9.0",
    # 日志
    "structlog>=24.1.0",
    # 工具
    "httpx>=0.26.0",
    "python-multipart>=0.0.9",
    # 缓存
    "cachetools>=5.3.0",
    "slowapi>=0.1.9",
    "sse-starlette>=2.0.0",
    # 可观测性 (OpenTelemetry)
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "httpx>=0.26.0",  # FastAPI TestClient 依赖
    "aiosqlite>=0.20.0",  # SQLite 异步驱动 (测试用)

    # 类型检查
    "mypy>=1.8.0",
    "boto3-stubs[essential]>=1.36.0",

    # 代码检查
    "ruff>=0.3.0",

    # 安全扫描
    "bandit>=1.7.7",
    "safety>=3.0.0",
    "pip-audit>=2.7.0",

    # pre-commit
    "pre-commit>=3.6.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-agents-platform"
Documentation = "https://your-org.github.io/ai-agents-platform"
Repository = "https://github.com/your-org/ai-agents-platform.git"

[project.scripts]
ai-agents = "src.presentation.api.main:run"

# ============================================================
# 构建系统
# ============================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================
# Ruff 配置 - 代码检查和格式化
# ============================================================

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

# 排除目录
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "migrations",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-annotations
    "ANN",
    # flake8-async
    "ASYNC",
    # flake8-bandit
    "S",
    # flake8-blind-except
    "BLE",
    # flake8-boolean-trap
    "FBT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-datetimez
    "DTZ",
    # flake8-debugger
    "T10",
    # flake8-errmsg
    "EM",
    # flake8-executable
    "EXE",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-import-conventions
    "ICN",
    # flake8-logging-format
    "G",
    # flake8-no-pep420
    "INP",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # flake8-pyi
    "PYI",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # flake8-self
    "SLF",
    # flake8-simplify
    "SIM",
    # flake8-slots
    "SLOT",
    # flake8-tidy-imports
    "TID",
    # flake8-type-checking
    "TCH",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib
    "PTH",
    # eradicate
    "ERA",
    # pandas-vet
    "PD",
    # pygrep-hooks
    "PGH",
    # Pylint
    "PL",
    # tryceratops
    "TRY",
    # flynt
    "FLY",
    # NumPy-specific
    "NPY",
    # Perflint
    "PERF",
    # Ruff-specific
    "RUF",
]

# 忽略的规则
ignore = [
    # 允许缺少公共模块/包的 docstring
    "D100",
    "D104",
    # 允许 docstring 第一行不是简短摘要
    "D212",
    # 允许 try-except-pass
    "S110",
    # 允许使用 assert (测试中常用)
    "S101",
    # 允许 subprocess 调用
    "S603",
    "S607",
    # 允许 magic value 比较
    "PLR2004",
    # 允许 too many arguments
    "PLR0913",
    # 允许 too many branches
    "PLR0912",
    # 允许 too many statements
    "PLR0915",
    # 允许 broad exception
    "BLE001",
    # 允许 boolean positional argument
    "FBT001",
    "FBT002",
    # 允许使用 Any
    # "ANN401",
    # 允许中文 docstring 结尾标点 (中文句号"。"不被识别)
    "D415",
    # 允许中文全角字符 (中文逗号、顿号等)
    "RUF002",
    # 允许延迟 import (避免循环依赖 / 减少启动时加载)
    "PLC0415",
    # 允许 __init__ 缺少 docstring (类级 docstring 已足够)
    "D107",
    # 允许 magic method 缺少 docstring
    "D105",
    # 允许公共方法缺少 docstring (遵循"类型即文档"原则, 类型自解释时省略)
    "D102",
    # 允许 "bearer" 等 OAuth2 标准字段名不被误判为硬编码密码
    "S105",
    # 允许使用 Any (boto3/SDK 返回值无精确类型)
    "ANN401",
    # 允许未使用的函数/方法参数 (接口契约要求)
    "ARG001",
    "ARG002",
    # 允许方法上使用 lru_cache (有意的单例懒加载模式)
    "B019",
    # Python 3.11+ self/cls 类型自动推断 (ANN101/ANN102 已在 ruff >=0.15 中移除)
]

# 每个文件的规则覆盖
[tool.ruff.lint.per-file-ignores]
# 测试文件
"tests/**/*.py" = [
    "S101",    # 允许 assert
    "S105",    # 允许硬编码 token/password 字符串
    "S106",    # 允许硬编码 password 参数
    "ARG001",  # 允许未使用的参数 (fixture)
    "ANN",     # 测试不强制类型注解
    "D",       # 测试不强制 docstring
    "PLR2004", # 允许 magic value
    "EM101",   # 允许异常字符串字面量
    "B008",    # 允许 Depends() 在参数默认值
]
# 迁移文件
"migrations/**/*.py" = ["ALL"]
# __init__ 文件
"__init__.py" = ["D104", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ============================================================
# MyPy 配置 - 类型检查
# ============================================================

[tool.mypy]
python_version = "3.11"

# 严格模式
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# 排除目录
exclude = [
    "migrations/",
    "tests/",
    "venv/",
    ".venv/",
]

# 第三方库配置
[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "claude_agent_sdk.*",
    "bedrock_agentcore.*",
    "cachetools.*",
    "slowapi.*",
    "limits.*",
    "opentelemetry.*",
    "google.*",
    "grpc.*",
    "sse_starlette.*",
    "onelogin.*",
    "ldap3.*",
]
ignore_missing_imports = true

# ============================================================
# pytest 配置 - 测试
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# 默认选项
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]

# 测试标记
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 耗时测试",
    "aws: 需要 AWS 服务的测试",
    "mysql: 需要 MySQL 数据库的测试 (通过 --mysql 启用)",
]

# 过滤警告
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestCollectionWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ============================================================
# Coverage 配置 - 测试覆盖率
# ============================================================

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "*/conftest.py",
    "src/presentation/api/main.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================
# Bandit 配置 - 安全扫描
# ============================================================

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # 跳过 assert 检查

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "vulture>=2.14",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "boto3-stubs[essential]>=1.36.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "bandit>=1.7.7",
]
